assessments dependant on companyId
