# server/src/models/OrganisationModel.ts
@@ -33,12 +33,13 @@ export type OrganisationType = {
   website: string;
   entityType: EntityType;
   industryId: number;
-  registeredNumber: number;
+  registeredNumber: string;
   street: string;
   cityOrTown: string;
   countryOrState: string;
-  postCode: number;
+  postCode: string;
   country: string;
+  createdBy: string;
   size: CompanySize;
   status: CompanyStatus;
   industry?: IndustryModel
@@ -77,6 +78,9 @@ export default class OrganisationModel extends Model {
 
   @Column
   postCode: number;
+
+  @Column
+  createdBy: number;
 
   @Column
   size: CompanySize;
